# deep-research-agent

./: .env.example  .gitignore  app_smb.py  brief_templates.py  deep_research.py  email_agent.py  env_audit_report.md  planner_agent.py  pyproject.toml  render.yaml  requirements.txt  research_manager.py  run.bat  schemas.py  search_agent.py  smb_briefs.py  upgrade-role-prompts.plan.md  writer_agent.py
.cursor/plans/: upgrade-role-prompts-f9929601.plan.md
.github/workflows/: ci.yml
parsing/: __init__.py  json_capture.py
prompts/: __init__.py  common.py
renderers/: __init__.py  markdown_renderer.py
scripts/: bootstrap_venv.ps1  sanity.py
tests/: test_brief_templates.py  test_email_agent.py  test_env.py  test_parsing.py  test_rendering.py  test_smb_briefs.py
