[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Deep research agent with AI capabilities"
requires-python = ">=3.9"
dependencies = [
    "gradio>=4.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "sendgrid>=6.11.0",
    "openai>=1.0.0",
    "openai-agents>=0.0.10",
]

[tool.mypy]
# Allow imports from libraries without type stubs
ignore_missing_imports = true

# Or alternatively, be more specific:
# [[tool.mypy.overrides]]
# module = ["sendgrid.*"]
# ignore_missing_imports = true

